style.css
@font-face {
  font-family: 'Aeonik';
  src: url('assets/AeonikTRIAL.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

body {
  font-family: 'Aeonik', sans-serif;
  overflow-x: hidden;
  height: 100vh;
  display: flex;
}

#bg-video {
  position: fixed;
  right: 0;
  bottom: 0;
  min-width: 100%;
  min-height: 100%;
  z-index: -1;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex: 1;
}

.logo-image {
  width: 100px;
  height: 100px;
  margin-bottom: 20px;
}

.middle-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.middle-content-scrollable {
  position: relative;
  max-width: 100%;
  padding: 20px;
  padding-top: 100px;
  padding-bottom: 100px;
  box-sizing: border-box;
  overflow-y: auto;
  height: 100%;
}

.tagline {
  font-size: 26px;
  color: white;
  margin-top: 0;
}

.student-count {
  font-size: 18px;
  color: white;
  margin-top: 20px;
}

.app-store-button {
  display: inline-block;
  background-color: #4a4a4a;
  color: white;
  text-decoration: none;
  padding: 10px 20px;
  border-radius: 4px;
  font-size: 18px;
  transition: background-color 0.3s ease;
}

.app-store-button:hover {
  background-color: #333333;
}

.info-icon {
  position: absolute;
  top: 15px;
  right: 15px;
  color: white;
  text-decoration: none;
}

.info-text {
  color: white;
  max-width: 50%;
  margin: 0 auto;
  line-height: 1.5;
}

.back-arrow {
  position: absolute;
  top: 10px;
  right: 10px;
  color: white;
  font-size: 24px;
  text-decoration: none;
}

@media (max-width: 600px) {
  .tagline {
    font-size: 14px;
  }

  .student-count {
    font-size: 12px;
  }

  .app-store-button {
    font-size: 14px;
    padding: 8px 16px;
  }

  .info-text {
    max-width: 90%;
  }
}

